--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -13,3 +13,6 @@ EditorStartupMap=/Game/Maps/MainMap.MainMap
 GameDefaultMap=/Game/Maps/MainMap.MainMap
 GlobalDefaultGameMode=/Game/BluePrints/ArcanoidGamemod.ArcanoidGamemod_C
 
+[/Script/Engine.AudioSettings]
+DefaultSoundClassName=/Engine/EngineSounds/Master.Master
+
